# wipecord-app

./: README.md  index.html  package-lock.json  package.json
src/: API.tsx  Accounts.tsx  App.tsx  Log.tsx  Setup.tsx  Wipe.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/accounts-page/: Accounts.tsx  SavedAccount.tsx
src/main-page/: Setup.tsx
