[package]
name = "wipecord"
version = "0.0.0"
description = "A desktop application for deleting your Discord messages."
authors = ["jadc"]
license = "GPL 3.0"
repository = "https://github.com/jadc/wipecord"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
